# rust-wasm-webpack-example

./: Makefile  README.md  build.sh
.github/workflows/: main.yaml
rust/: Cargo.toml
rust-wasm-bindgen/: Cargo.toml
rust-wasm-bindgen/src/: lib.rs
rust/src/: lib.rs
web/: .babelrc  .browserslistrc  .eslintrc.json  .gitignore  apply_critical.py  package-lock.json  package.json  postcss.config.js  webpack.common.js  webpack.dev.js  webpack.prod.js
web/src/: footer.css  index.css  index.html  index.ts  rust.ts
web/src/template/: footer.html  header-index.html  header.html
web/test/: evaluate.js  evaluate.ts
