[package]
name = "rust-wasm-bindgen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust = { path = "../rust" }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
serde_derive = "1.0.137"
