[package]
name = "rust-wasm-bindgen"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
rust = { path = "../rust" }
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_derive = "1.0.152"
wasm-bindgen = "0.2.84"